--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p style="color:aquamarine;" class="hours" id="demo"></p>
   </div>
   <div class="bottomleft">
-    <p>Bridging People and Technology</p>
+    <p>Redefining Technology</p>
   </div>
 </div>
 </body>
