--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p><img src="Company_Logo.png" alt="" width="250"></p>
   </div>
   <div class="middle">
+    <h3>Something cool</h3>
     <h1> WEBSITE <span style="color:rgb(238, 255, 0);">COMING</span>  SOON </h1>
     <hr>
     <p style="color:aquamarine;" class="hours" id="demo"></p>
